--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  padding: 0;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header{
+  background-color: #F55a5a;
+  color: whitesmoke;
+  text-align: center;
+  padding-block: 10px 15px;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+
 }
+.glob-img {
+  height: 30px;
+  border-radius: 50%;
+}
+
+.container{
+  display: flex;
+  padding: 40px;
+  gap: 20px;
+  padding: 40px 20px 0 40px ;
+  font-size: 1.4rem;
+
+
+}
+
+.journal-entry{
+  overflow: hidden;
+  flex-shrink: 0;
+  width: 160px;
+  height: 220px;
+  border-radius: 10px;
+}
+
+.img1 {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover; 
+}
+.location-img{
+  height: 20px;
+  border-radius: 25%;
+}
+
+.mg0{
+  margin: 5px;
+}
+
+
+footer{
+  background-color: #F55a5a;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+
+}
+
+footer p{
+  margin:10px;
+}
+
+
+
